novos endpoints para manipular as schedules